# alaniz-cipher

./: .gitignore  README.md  SECURITY_ANALYSIS.md  SECURITY_ANALYSIS_EN.tex  SECURITY_ANALYSIS_ES.tex  pyproject.toml
alaniz/crypto/: protocol.py  sigma.py
alaniz/demo/: demo_basic.py
experiments/: 01_scaling_verification.py  02_cpa_attack_analysis.py  03_uniqueness_analysis.py  04_sigma_selection.py  05_complexity_analysis.py  06_postquantum_analysis.py  07_collision_table.py  08_d1_key_recovery_poc.py  09_exhaustive_A_known_plaintext_attack.py  10_cpa_scaling_closed_form_attack.py  11_collision_multiplicity_study.py  12_key_recovery_diagnostics.py  13_differential_column_attack.py  14_v2_redteam.py  14_v6_interpolation_matrix_audit.py  15_v6_spn_differential_audit.py  16_v6_effective_matrix_hybrid.py  17_v6_degeneracy_audit.py  18_v6_node_decoupling_audit.py  README.md  v6_audit_utils.py
experiments/results/: 09_attack_A_tables.txt  10_cpa_scaling_closed_form_attack_d2_d4.txt  11_attack_B_tables.txt  12_key_recovery_diagnostics.txt
tests/: test_protocol.py
