[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "alaniz-cipher"
version = "1.0.0"
description = "SHEC: Sheaf Homology Encryption Cipher — A cryptographic primitive based on nonlinear sheaf morphisms over graphs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Dr. Lucas Alaniz Pintos", email = "lucas.alaniz@ineco.com"},
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "sphinx>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
